test/types/range/strided/tooBigStride.chpl
var i8 = 10: int(8);
var r = 1..i8;
config var stride = 500;
var r2 = r by stride;
